--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>شركة تنال للاستثمار - Tanal</title>
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" href="assets/img/logo-dark.png">
 
     <!-- FONTS -->
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
